Fixed Spacing in the Landing Page and solved the Overflows - Tested OK

--- a/frontend/keyvia/src/App.css
+++ b/frontend/keyvia/src/App.css
@@ -2719,17 +2719,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     justify-content: center;
 }
 
-/* ==========================================================================
-   Side Panel & Overlay
-   ========================================================================== */
 .overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(20px);
     z-index: 1001; /* Above main content, below side panel */
     opacity: 0;
     visibility: hidden;
@@ -2747,7 +2744,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     right: 0;
     width: 280px;
     height: 100%;
-    background-color: #161b22;
+    background-color: black;
     border-left: 1px solid rgba(128, 128, 128, 0.242);
     z-index: 1002; /* Highest z-index */
     transform: translateX(100%);
@@ -2771,7 +2768,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .close-button {
     background: none;
     border: none;
-    color: #E5E7EB;
+    color: #00c77b;
     cursor: pointer;
     padding: 8px;
 }
@@ -2886,8 +2883,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: max-content;
     padding-top: 12px;
     padding-bottom: 12px;
-    padding-left: 18px;
-    padding-right: 18px;
+    width: 120px;
     border-radius: 8px;
     font-weight: 600;
     margin-bottom: 8px;
@@ -2902,8 +2898,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: auto;
     padding-top: 12px;
     padding-bottom: 12px;
-    padding-left: 18px;
-    padding-right: 18px;
+    min-width:120px;
     border-radius: 8px;
     font-weight: 600;
     margin-bottom: 8px;
@@ -2925,6 +2920,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-weight: 600;
     cursor: pointer;
     text-decoration: none;
+    font-size: 14px;
 }
 
 
